--- a/index.html
+++ b/index.html
@@ -4,40 +4,111 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <link rel="stylesheet" href="assets/CSS/style.css">
   <title>Typemaster pre-launch landing page</title>
+   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@600&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@1,100&family=Barlow:wght@100&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <header>
+    <div class="logo">
+      <img class="logo1" src="assets/SVG/logo.svg" alt="error_found" width="35px">
+    </div>
+    <div class="btn">
+      <button>Pre-order now</button>
+    </div>
 
-  Pre-order now
-  Typemaster keyboard
-  Improve your productivity and gaming without breaking the bank.
-  Upgrade to a high quality mechanical typing experience.
-  Pre-order now
-  Release on 5/27
-  Mechanical wireless keyboard
-  The Typemaster keyboard boasts top-notch build and practical
-  design. It offers a wide variety of switches and keycaps, along
-  with reliable wireless connectivity.
-  Highly compatible
-  Easy to use and works well with all major computer brands,
-  gaming consoles and mobile devices. Plug & play, no installation
-  or driver needed.
-  Wireless with bluetooth
-  Powerful 2.4G RF technology allows you to connect the cordless
-  keyboard from up to 30ft away. Simply plug the unifying receiver
-  into your computer.
-  High capacity battery
-  Equipped with a long-lasting built-in battery, you’ll never have
-  to spend a dime on replaceable ones. Enjoy 40 hours of usage
-  time between charges.
-  RGB backlit modes
-  Choose from 4 backlight brightness levels and adjustable breathing
-  speed. Each key glows intensely in the dark and helps you type in
-  low light conditions.
-  Typemaster 2021 | All Rights Reserved
+  </header>
 
+  <main>
+    <div class="content1">
+      <div class="para1">
+        <h1> TYPEMASTER <br> KEYBOARD</h1>
+        <p>Improve your productivity and gaming without breaking<br> the bank.
+          Upgrade to a high quality mechanical typing<br> experience.</p>
+        <button class="btn1">Pre-order now</button>
+        <button class="btn2">Release on 5/27</button>
+      </div>
+      <div class="img1">
+        <img src="assets/images/image-keyboard.jpg" alt="error_found" width="300px" height="250px">
+      </div>
+    </div>
+
+    <div class="content2">
+      <div>
+        <img class="img2" src="assets/images/image-phone-and-keyboard.jpg" alt="error_found" width="200px"
+          height="300px">
+      </div>
+      <div class="img3">
+        <img src="assets/images/image-glass-and-keyboard.jpg" alt="error_found" width="300px" height="300px">
+      </div>
+      <div class="para2">
+        <h3>MECHANICAL<br> WIRELESS<br> KEYBOARD</h3>
+        <p>The Typemaster keyboard boasts<br> top-notch build and practical
+          design.<br> It offers a wide variety of switches and keycaps, along
+          with reliable<br> wireless connectivity.
+        </p>
+      </div>
+    </div>
+  </main>
+
+  
+  <footer>
+    <div class="ftr1">
+     <img src="assets/SVG/icon-compatible.svg">
+     <div class="ftr2">
+       <h2>Highly compatible</h2>
+     </div>
+     <div class="conten3">
+       <p>Easy to use and works well with all<br> 
+         major computer brands,gaming<br>
+         consoles and mobile devices. Plug & <br>
+         play, no installation or driver needed.</p>
+     </div>
+    </div>
+    <div class="fix">
+     <img src="assets/SVG/icon-bluetooth.svg">
+     <div class="ftr2">
+       <h2>Wireless with<br>
+         bluetooth</h2>
+     </div>
+     <div class="content3">
+       <p>Powerful 2.4G RF technology allows<br>
+         you to connect the cordless<br>
+         keyboard from up to 30ft away.<br> 
+         Simply plug the unifying receiver into <br>
+         your computer.</p>
+     </div>
+    </div>
+    <div class="fix">
+     <img src="assets/SVG/icon-battery.svg">
+     <div class="ftr2">
+       <h2>High capacity<br>
+         battery</h2>
+     </div>
+     <div class="content3">
+       <p>Equipped with a long-lasting built-in<br>
+         battery, you’ll never have to spend a<br>
+         dime on replaceable ones. Enjoy 40<br> 
+         hours of usage time between <br>
+         charges.</p>
+     </div>
+    </div>
+    <div class="ftr3">
+     <img src="assets/SVG/icon-light.svg">
+     <div class="ftr2">
+       <h2>RGB backlit<br>
+         modes</h2>
+     </div>
+     <div class="content3">
+       <p>Choose from 4 backlight brightness<br> 
+         levels and adjustable breathing<br>
+         speed. Each key glows intensely in <br>
+         the dark and helps you type in low<br>
+         light conditions.</p>
+     </div>
+    </div>
+ </footer>
 </body>
-
 </html>
